storage/longhorn/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-longhorn-ui
  namespace: longhorn-system
spec:
  stripPrefix:
    prefixes:
      - /longhorn

---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/longhorn`)
      priority: 10
      middlewares:
        - name: strip-prefix-longhorn-ui
          namespace: longhorn-system
      services:
        - kind: Service
          name: longhorn-frontend
          port: 80
